# monty_isaac

./: .gitignore  .gitmodules  c.py  future_improve.md  lqtech.txt  lqtech_commands.txt  lqtech_notes.md  lqtech_notes.txt  pyrightconfig.json  x3plus_reachability.py  x3plus_workspace.py
.cursor/plans/: pick_and_place_service_92ef521c.plan.md
.cursor/rules/: logging-discipline.mdc  project-constraints.mdc  real-robot-rebuild.mdc  robot-motion-safety.mdc  vision-env-scripts.mdc  x3plus-full-stack.mdc  x3plus-gripper-geometry.mdc  x3plus-motion-safty-efficiency.mdc  x3plus-pick-place-pipeline.mdc
.cursor/skills/record-scan/: SKILL.md
.cursor/skills/test-vision-with/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.py_install_dl/: lqtech_zmq_client.py  lqtech_zmq_service.py  x3plus-serial-protocol.mdc  x3plus_serial.py
demos/: hello_isaac.py  isaac_sim_demo.py  isaac_sim_ros2_demo.py
docker_all/: .dockerignore  .env.example  README.md  REMOTE_SETUP.md  compose.yml  docker-compose.yml
docker_all/components/_template/: Dockerfile  README.md  docker-compose.fragment.yml
docker_all/components/isaac_comp/: Dockerfile  README.md  compose.yml  docker-compose.fragment.yml
docker_all/components/monty_comp/: Dockerfile  compose.yml
docker_all/components/monty_comp/app/: pyproject.toml
docker_all/components/monty_comp/app/monty_ext/: __init__.py  motor_policies.py
docker_all/components/monty_comp/app/monty_ext/conf/: cnn_like_monty_100_test.yaml
docker_all/components/monty_comp/app/monty_ext/configs/: __init__.py  cnn_like_monty_100_test.py  cnn_like_monty_100_test_doc.py  config_to_yaml.py  dist_agent_5lm_2obj_crop.py  turntable_train.py
docker_all/components/monty_comp/app/monty_ext/environments/: __init__.py  object_frame_interface.py  turntable_env.py  turntable_loader.py  video_turntable_env.py
docker_all/components/monty_comp/app/monty_ext/experiments/: cnn_experiment.py  turntable_experiment.py
docker_all/components/monty_comp/app/monty_ext/scripts/: __init__.py  generate_cnn_config_yaml.py  run_cnn_experiment.py  test_turntable_learn.py  test_vision_pipeline.py  turntable_learn.py  turntable_scan.py  visualize_learned_models.py  visualize_model.py
docker_all/components/monty_comp/app/monty_ext/sensor_modules/: __init__.py  patch_camera_sm.py  realsense_sm.py
docker_all/components/monty_comp/app/monty_ext/transforms/: __init__.py  crop_patches.py  inject_patch_sensor_states.py  world_to_object_frame.py
docker_all/components/monty_comp/app/monty_ext/vision/: __init__.py  _bridge.py  _server.py  sam2_segmenter.py  vggt_provider.py
docker_all/components/remote_real_x3plus/: Dockerfile  README.md  docker-compose.remote.yml
docker_all/components/remote_zmq_service/: Dockerfile  README.md  docker-compose.remote.yml
docker_all/components/ros2_comp/: Dockerfile  compose.yml  docker-compose.fragment.yml  entrypoint.sh  launch_bringup.sh
docker_all/components/ros2_comp/app/monty_bt/: CMakeLists.txt  package.xml
docker_all/components/ros2_comp/app/monty_bt/include/monty_bt/: call_trigger_service.hpp  compute_grasp_params.hpp  set_planner_params.hpp
docker_all/components/ros2_comp/app/monty_bt/launch/: bt_pick_place.launch.py
docker_all/components/ros2_comp/app/monty_bt/src/: bt_pick_place_node.cpp
docker_all/components/ros2_comp/app/monty_bt/trees/: pick.xml  pick_and_place.xml  place.xml
docker_all/components/vision_comp/: Dockerfile  compose.yml
docker_all/components/vision_comp/app/: pyproject.toml
docker_all/components/vision_comp/app/vision_server/: __init__.py  __main__.py  local_api.py  server.py
docker_all/components/vision_comp/app/vision_server/scripts/: record_scan.py  test_vision_pipeline.py
docker_all/components/zmq_bridge_comp/: Dockerfile  docker-compose.fragment.yml
docker_all/scripts/: build_all.sh  copy_x3plus_from_src.sh  generate_isaac_urdf.sh  real_up.sh  run_compose.sh  send_first_joint_trajectory.py  sim_up.sh  start_local_registry.sh  test_gripper.sh
docker_all/shared/x3plus_config/: init_positions.yaml
docker_all/shared/x3plus_isaac/: README.md
install/: local_setup.sh  setup.sh
install/monty_demo/share/monty_demo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: check_x3plus_ros2_prereqs.sh  rebuild_and_source.sh  run_x3plus_isaac_ros2.sh  start_isaac.sh  start_ros2_bringup.sh
src/monty_demo/: README.md  package.xml  setup.cfg  setup.py
src/monty_demo/config/: x3plus_controllers.yaml
src/monty_demo/demos/: README.md  dof2_isaac_demo.py  hello_isaac.py  isaac_sim_demo.py  isaac_sim_ros2_demo.py  x3plus_isaac_2dof_demo.py  x3plus_isaac_arm_demo.py  x3plus_isaac_demo.py
src/monty_demo/dof2_robot/: README.md
src/monty_demo/monty_demo/: robot_description_publisher_node.py  x3plus_isaac_arm_demo.py
src/monty_demo/opus_plan_and_imp/: opus_install_prereqs.sh
src/monty_demo/x3plus_isaac/: README.md
(+73 files in other folders)
