[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monty_ext"
version = "0.1.0"
description = "LQTech extensions for tbp.monty — custom sensors, environments, and configs"
requires-python = ">=3.8"
dependencies = [
    # tbp.monty is installed separately (from submodule, not PyPI).
    # Vision model deps are installed separately in the Dockerfile for layer caching.
    # Listed here for documentation only (--no-deps install skips them):
    # "pyrealsense2",
    # "opencv-python-headless",
    # "open3d",
    # "pyzmq",
    # "sam-2",
    # "vggt",
    # "plotly",
    # "groundingdino",
]

[project.scripts]
turntable-scan = "monty_ext.scripts.turntable_scan:main"
record-scan = "monty_ext.scripts.record_scan:main"
turntable-learn = "monty_ext.scripts.turntable_learn:main"
visualize-model = "monty_ext.scripts.visualize_model:main"
test-vision-pipeline = "monty_ext.scripts.test_vision_pipeline:main"
run-cnn-experiment = "monty_ext.scripts.run_cnn_experiment:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monty_ext*"]
